--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,13 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
-
+  background-color: theme('colors.white');
   @media (prefers-color-scheme: dark) {
+    background-color: theme('colors.gray.950');
     color-scheme: dark;
   }
 }
